[webcanvas][back] GameTurn save 안되던 오류 수정 / 비동기 예외 핸들러 추가